# zdppy_rabbitmq

./: .gitignore  README.md  pyproject.toml
examples/z01_basic/: consumer.py  producer.py
examples/z02_fanout/: consumer.py  producer.py
examples/z03_direct/: consumer.py  producer.py
zdppy_rabbitmq/: config.py  exceptions.py  rabbitmq.py
